## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = morsecode

morsecode_SOURCES = \
	main.c \
	line_reader.h \
	line_parser.h \
	file_writer.h \
	morse_code_factory.h \
	morse_code.h

morsecode_LDFLAGS = 

morsecode_LDADD = 

